--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <h1>Hello,,World</h1>
     <h2>{{ 5 * 6 }}</h2>
     <h3>Random Number: {{ num }}</h3>
+    <a href="{{ url_for('get_blog', num=2) }}">Go to Blog</a>
 </body>
 <footer>
     <p>Made with ❤️ by M&M ©️{{ YYYY }} </p>
